[package]
name = "hex-forge"
version = "0.1.0"
edition = "2021"
description = "Terminal hex editor with file format awareness"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
